[feature1]update index.cshtml

--- a/websolution/webapp/Pages/Index.cshtml
+++ b/websolution/webapp/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p></a>Learned about building and deploying web apps with ASP.NET CORE on AZURE by GIT HUB ACTIONS</p>
 </div>
