[initial]setup pipeline azdevops

--- a/websolution/webapp/Pages/Index.cshtml
+++ b/websolution/webapp/Pages/Index.cshtml
@@ -7,4 +7,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p></a>Learned about building and deploying web apps with ASP.NET CORE on AZURE by GIT HUB ACTIONS</p>
+    <p></a>Learned about update on azure pipelines</p>
 </div>
