--- a/websolution/webapp/Pages/Index.cshtml
+++ b/websolution/webapp/Pages/Index.cshtml
@@ -10,4 +10,5 @@
     <p></a>Learned about update on azure pipelines</p>
     <p></a>Add new branches</p>
     <p></a>Merge between main and feature 02</p>
+    <p></a>Testing rebase</p>
 </div>
