--- a/websolution/webapp/Pages/Privacy.cshtml
+++ b/websolution/webapp/Pages/Privacy.cshtml
@@ -8,3 +8,4 @@
 <p>Use this page to detail your site's privacy policy.</p>
 <p>Add to feature 1</p>
 <p>Add to feature 2</p>
+<p>Add to rebase-test</p>
