--- a/websolution/webapp/Pages/Index.cshtml
+++ b/websolution/webapp/Pages/Index.cshtml
@@ -11,4 +11,5 @@
     <p></a>Add new branches</p>
     <p></a>Merge between main and feature 02</p>
     <p></a>Testing rebase</p>
+    <p></a>Using git flow branching strategy</p>
 </div>
