[bug] fix error page

--- a/websolution/webapp/Pages/Error.cshtml
+++ b/websolution/webapp/Pages/Error.cshtml
@@ -10,7 +10,7 @@
 @if (Model.ShowRequestId)
 {
     <p>
-        <strong>release test, direct edit on main</code>
+        <strong>release test, direct edit on main</strong>
     </p>
 }
 
